<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgvBackgroundMainPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_desc"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin_txt"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/gl_hor_10per_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gl_ver_66per_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64" />

        <Button
            android:id="@+id/btnGame1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/btnGame1_txt"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btnGame2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl_hor_50per_1"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/btnGame2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:text="@string/btnGame2_txt"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btnGame3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGame1" />

        <Button
            android:id="@+id/btnGame3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/btnGame3_txt"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/gl_hor_90per_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGame2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hor_50per_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hor_90per_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hor_10per_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_ver_66per_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_ver_50per_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainTitle"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gl_hor_50per_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl_hor_10per_1"
            app:layout_constraintVertical_bias="0.122" />

        <Button
            android:id="@+id/btnLeaderboards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/magenta"
            android:text="@string/btnLeaderboards_txt"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/gl_hor_10per_1"
            app:layout_constraintEnd_toStartOf="@+id/gl_ver_50per_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>