<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/flappy_bird_background"
        android:layout_marginBottom="60dp">

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/completely_rounded_button"
            android:text="&lt;"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-condensed"
            android:text="Profile"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="40sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full Name:"
            android:textColor="#000"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/full_name"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nickname:"
            android:textColor="#000"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nickname"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Address:"
            android:textColor="#000"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_address"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number:"
            android:textColor="#000"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age:"
            android:textColor="#000"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Logout"
            android:textSize="20sp"
            android:backgroundTint="@color/black"
            />

    </RelativeLayout>

</LinearLayout>